post-service/src/main/java/com/example/post_service/error/BaseErrorCode.java
package com.example.post_service.error;

import org.springframework.http.HttpStatus;

public interface BaseErrorCode {
    int getCode();
    String getMessage();
    HttpStatus getHttpStatus();
}
